[gd_scene load_steps=16 format=3 uid="uid://pe20ipdc1u1y"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_4oxyg"]
[ext_resource type="AudioStream" uid="uid://c3f1p2jmrxoyn" path="res://Audio/SFX - Death Explosion.ogg" id="2_4kw30"]
[ext_resource type="Material" uid="uid://d3jwuhmj6iea2" path="res://ShipRedMaterial.tres" id="2_uly8q"]
[ext_resource type="AudioStream" uid="uid://bo0g10arlfpjt" path="res://Audio/SFX - Success.ogg" id="3_lyep8"]
[ext_resource type="AudioStream" uid="uid://bngoqyhjeh8bd" path="res://Audio/SFX - Main engine thrust.ogg" id="4_6sobr"]

[sub_resource type="BoxMesh" id="BoxMesh_uhnwv"]
size = Vector3(1, 0.3, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_fvykb"]
top_radius = 0.025
bottom_radius = 0.075
height = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_n2q2v"]
size = Vector3(0.8, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_ulice"]
size = Vector3(1.15, 0.05, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_qjofy"]
size = Vector3(0.05, 0.2, 0.025)

[sub_resource type="BoxMesh" id="BoxMesh_hevn8"]
size = Vector3(0.2, 0.2, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_x2aer"]
size = Vector3(2.25, 0.02, 0.14)

[sub_resource type="BoxShape3D" id="BoxShape3D_jg1t5"]
size = Vector3(0.0869141, 0.249512, 2000.64)

[sub_resource type="BoxShape3D" id="BoxShape3D_eo5au"]
size = Vector3(2.03467, 0.718262, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jscb0"]
size = Vector3(2.06976, 0.531372, 1)

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.610655, 0)
collision_layer = 8
collision_mask = 36
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_4oxyg")
rotor_speed = 20.0
zoom_in_fov = 50.0
zoom_out_fov = 80.0
zoom_height_threshold = 1.5
camera_distance = 10.41
camera_height = 1.06

[node name="HelicoptorBody" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.472166, -0.214688, 0)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_uhnwv")

[node name="Body2" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.186059, 0.0396317, 0)
material_override = ExtResource("2_uly8q")
mesh = SubResource("CylinderMesh_fvykb")

[node name="Tail" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.418879, -0.25, 0)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_n2q2v")

[node name="Skid1" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.457954, -0.527826, -0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_ulice")

[node name="SkidArm1" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.287654, -0.423809, -0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_qjofy")

[node name="SkidArm2" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.809662, -0.423809, -0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_qjofy")

[node name="Skid2" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.457954, -0.527826, 0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_ulice")

[node name="SkidArm3" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.287654, -0.423809, 0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_qjofy")

[node name="SkidArm4" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.809662, -0.423809, 0.2)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_qjofy")

[node name="RearRotor" type="MeshInstance3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.899135, -0.25, 0)
material_override = ExtResource("2_uly8q")
mesh = SubResource("BoxMesh_hevn8")

[node name="Rotor" type="Node3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182959, 0.145217, 0)

[node name="Blade1" type="MeshInstance3D" parent="HelicoptorBody/Rotor"]
mesh = SubResource("BoxMesh_x2aer")
skeleton = NodePath("../..")

[node name="Blade2" type="MeshInstance3D" parent="HelicoptorBody/Rotor"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_x2aer")
skeleton = NodePath("../..")

[node name="BulletSpawn" type="Marker3D" parent="HelicoptorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08232, -0.3165, 0)

[node name="NoseHitBox" type="Area3D" parent="HelicoptorBody"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HelicoptorBody/NoseHitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02879, -0.212755, 999.822)
shape = SubResource("BoxShape3D_jg1t5")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.017334, -0.195068, 0)
shape = SubResource("BoxShape3D_eo5au")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4kw30")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lyep8")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_6sobr")

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.83053)

[node name="Camera3D" type="Camera3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 0.972149, 0.234362, 0, -0.234362, 0.972149, 0, 0.667677, 0)
current = true
fov = 60.0

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 64

[node name="HurtboxCollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0210876, -0.103943, 0)
shape = SubResource("BoxShape3D_jscb0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
